--- a/form/index.html
+++ b/form/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="gym, form, membership">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym Membership Form</title>
     <link rel="stylesheet" href="css/style.css">
@@ -141,7 +141,7 @@
             </div>
             <div class="textarea-container">
                 <p>What would you like to see in Jim's Big <span>Gym</span> in the future?</p>
-                <textarea name="suggestions" id="textarea" cols="35" rows="5" placeholder="Write your suggestions here.."></textarea>
+                <textarea name="suggestions" id="textarea" placeholder="Write your suggestions here.."></textarea>
             </div>
 
             <div class="btn-container">
